[project]
name = "monitorluna-agent"
version = "2.0.0"
description = "MonitorLuna Agent"
requires-python = ">=3.8"
dependencies = [
    "websockets>=12.0",
    "pyautogui>=0.9.54",
    "pillow>=10.0.0",
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "pywin32>=306",
    "pystray>=0.19.5",
    "wmi>=1.5.1",
    "aiohttp>=3.9.0",
]
